--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ install:
 script:
   - make test
 
+after_succes:
+  - coveralls
+
 notifications:
     email: false
     slack: openbikes:2eVWLSI2CUwuds6LnquzalyG
